--- a/Front-end/semana2/calculadora de imc-inicio_js/index-imc.html
+++ b/Front-end/semana2/calculadora de imc-inicio_js/index-imc.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IMC</title>
     <script src="imc.js" defer></script>
     <link rel="stylesheet" href="style-imc.css" />
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+/>
   </head>
   <body>
     <div class="container_all">
+      <i class="fa-solid fa-scale-balanced" style="color: #63E6BE;"></i>
       <div class="container_principal" id="container_principal">
         <img>
         <h1 class="title">Calculator IMC</h1>
         <p>Discover your body mass index.</p>
 
-        <label for="height">Height</label>
+        <label for="height"><i class="fa-solid fa-scale-balanced" style="color: #31c99b;"></i> Height</label>
         <input type="number" class="input" id="height" placeholder="m" />
-        <label for="weight">Weight</label>
+        <label for="weight"><i class="fa-solid fa-ruler" style="color: #51d6ae;"></i> Weight</label>
         <input type="number" class="input" id="weight" placeholder="kg" />
-        <button class="botao-calcular" onclick="(exibirIMC())">Calculate</button>
+        <button class="botao-calcular" onclick="(exibirIMC())"><i class="fa-solid fa-calculator" style="color: #51d2ab;"></i> Calculate</button>
 
-        <button class="clear" type="button">Clear</button>
+        <button class="clear" type="button"><i class="fa-solid fa-arrows-rotate"></i></button>
         <div class="result" id="result">
           <p>Your imc is</p>
           <p id="imc-value">labubu</p>
