--- a/Front-end/semana2/pagina de login/index_login.html
+++ b/Front-end/semana2/pagina de login/index_login.html
@@ -10,19 +10,21 @@
   <body>
     <div class="container_formulario" id="container_formulario">
       <h1 class="title">Login</h1>
-      <input type="text" placeholder="Email" class="input-email" id="input-email" />
-      <input type="password" placeholder="Password" class="input-senha" id="input-senha" />
-      <div class="checkbox-wrapper-46">
-        <input class="inp-cbx" id="cbx-46" type="checkbox" onclick="showpassword()" />
-        <label class="cbx" for="cbx-46"
-          ><span>
-            <svg width="12px" height="10px" viewbox="0 0 12 10">
-              <polyline points="1.5 6 4.5 9 10.5 1"></polyline></svg></span
-          ><span>Show password</span>
-        </label>
-      </div>
+        <input type="text" placeholder="Email" class="input-email" id="input-email" />
 
-      <button class="button-signin" onclick="(validarAll(), validarEmail(), validarPassword())">SIGN IN</button>
+        <input type="password" placeholder="Password" class="input-senha" id="input-senha" />
+
+        <div class="checkbox-wrapper-46">
+          <input class="inp-cbx" id="cbx-46" type="checkbox" onclick="showpassword()" />
+          <label class="cbx" for="cbx-46"
+            ><span>
+              <svg width="12px" height="10px" viewbox="0 0 12 10">
+                <polyline points="1.5 6 4.5 9 10.5 1"></polyline></svg></span
+            ><span>Show password</span>
+          </label>
+        </div>
+
+        <button class="button-signin" onclick="(validarAll(), validarEmail(), validarPassword(), perceberErro())">SIGN IN</button>
       <p class="forgot">Forgot <a href="..." target="_blank">Username / Password?</a></p>
       <p>Don't have an account? <a href="..." target="_blank"> Sign up</a></p>
     </div>
