Atualizada responsividade de curriculo apenas para estudo

--- a/Front-end/semana 1/curriculo/curriculotest.html
+++ b/Front-end/semana 1/curriculo/curriculotest.html
@@ -9,7 +9,7 @@
   <body>
     <div class="curriculo_inteiro">
     <h1 id="Nome">Luiz Gustavo da Silva Araujo</h1>
-    <h2>Developer Full Stack</h2>
+    <h2 class="sub-title">Developer Full Stack</h2>
     <div class="contato2">
     <p><b>Email: </b><a href="mailto:luizdograu@gmail.com">luizdograu@gmail.com</a></p>
     <p><b>Telephone: </b><a href="tel:+551199999999"> (47) 999999999</a></p>
