--- a/Front-end/semana 1/tabela nutricional/tabela_nutricional.html
+++ b/Front-end/semana 1/tabela nutricional/tabela_nutricional.html
@@ -9,12 +9,11 @@
   <body>
     <div class="container_pagina">
       <div class="container_nome_receita">
-        <img src="../assets/frango.png" width="30px" height="30px" alt="Icone de frango assado" />
-        <h1 class="nome_receita">Receita de frango assado</h1>
+        <h1 class="nome_receita">🍗 Receita de frango assado</h1>
       </div>
 
       <div class="container_imagem_receita">
-        <img src="../assets/frango_assado.jpg" width="350px" alt="Imagem de frango asssado receita" class="imagem_receita" />
+        <img src="../../assets/frango.png" width="350px" alt="Imagem de frango asssado receita" class="imagem_receita" />
       </div>
 
       <h2 class="secao_pagina">Descricao do prato</h2>
